--- a/index.html
+++ b/index.html
@@ -11,6 +11,19 @@
             <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
             <script src="https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
         <![endif]-->
+        <style>
+            .thumbnail .caption h2{
+                font-family: 'cwTeXFangSong', serif;
+                color: #ffa
+            }
+            .thumbnail {
+              background: #888888
+            }
+            .thumbnail .caption p {
+                font-family: 'cwTeXFangSong', serif;
+                color: blue
+            }
+        </style>
     </head>
     <body>
         
